Implemented minor bug fixes